for better result

--- a/mysite/templates/mysite/portfolio.html
+++ b/mysite/templates/mysite/portfolio.html
@@ -7,8 +7,9 @@
             <div class="card">
                 <img class="card-img-top" src="{% static 'mysite/images/unopinion.png' %}" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Unopinion</h5>
-                    <p class="card-text">This is my startup whose aim is help Youtube content creators achieve success..</p>
+                    <h5 class="card-title">Online E-Article Portal</h5>
+                    <p class="card-text">The Online E-Article Portal, it is a blogging website , where you can post your articles and others can see your work.
+                        https://github.com/Manavver/The-SocialNetwork</p>
                     <p class="card-text">
                         <small class="text-muted">www.unopinion.com</small>
                     </p>
