for better result

--- a/mysite/templates/mysite/portfolio.html
+++ b/mysite/templates/mysite/portfolio.html
@@ -11,27 +11,28 @@
                     <p class="card-text">The Online E-Article Portal, it is a blogging website , where you can post your articles and others can see your work.
                         https://github.com/Manavver/The-SocialNetwork</p>
                     <p class="card-text">
-                        <small class="text-muted">www.unopinion.com</small>
+                        <small class="text-muted">The-social-network</small>
                     </p>
                 </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="{% static 'mysite/images/firefight.jpg' %}" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">FireFight</h5>
-                    <p class="card-text">IOT Application to help firefighters. Includes Facial Tracking and Environment detection</p>
+                    <h5 class="card-title">Online E-Library Portal</h5>
+                    <p class="card-text">Online E-Library Portal has been developed on Python, with Django framework.
+                        It is an online website for a small Library. Where user can browse available books and manage their accounts.https://github.com/Manavver/E-Library-Portal.git</p>
                     <p class="card-text">
-                        <small class="text-muted">Internet of Things</small>
+                        <small class="text-muted">https://f01app.herokuapp.com/catalog/</small>
                     </p>
                 </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="{% static 'mysite/images/kupika.jpg' %}" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Kupika</h5>
-                    <p class="card-text">Smart Container for Babies - IOT based Application and hardware</p>
+                    <h5 class="card-title">WebApp</h5>
+                    <p class="card-text">It is a WebApp for home Automation, where I am involved to create database and APIs like GetallCustomer_Details, All_Site_Details and Alarms API etc.</p>
                     <p class="card-text">
-                        <small class="text-muted">Android Developement</small>
+                        <small class="text-muted">Django-Rest-App</small>
                     </p>
                 </div>
             </div>
