for better result

--- a/mysite/templates/mysite/portfolio.html
+++ b/mysite/templates/mysite/portfolio.html
@@ -5,7 +5,7 @@
     <div class="container" style="margin-top: 100px">
         <div class="card-deck">
             <div class="card">
-                <img class="card-img-top" src="{% static 'mysite/images/unopinion.png' %}" alt="Card image cap">
+                <img class="card-img-top" src="{% static 'mysite/images/blog1.png' %}" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Online E-Article Portal</h5>
                     <p class="card-text">The Online E-Article Portal, it is a blogging website , where you can post your articles and others can see your work.
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="{% static 'mysite/images/firefight.jpg' %}" alt="Card image cap">
+                <img class="card-img-top" src="{% static 'mysite/images/blog2.jpeg' %}" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Online E-Library Portal</h5>
                     <p class="card-text">Online E-Library Portal has been developed on Python, with Django framework.
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="{% static 'mysite/images/kupika.jpg' %}" alt="Card image cap">
+                <img class="card-img-top" src="{% static 'mysite/images/blog3.jpeg' %}" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">WebApp</h5>
                     <p class="card-text">It is a WebApp for home Automation, where I am involved to create database and APIs like GetallCustomer_Details, All_Site_Details and Alarms API etc.</p>
