--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -39,17 +39,17 @@
 
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.linkedin.com/in/attreya/">
+                    <a class="nav-link" href="https://www.linkedin.com/in/django-developer-450822138/">
                         <img src="{% static 'mysite/images/linkedin.png' %}" width="30" height="30"/>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.instagram.com/bhattattreya">
+                    <a class="nav-link" href="###">
                         <img src="{% static 'mysite/images/instagram.png' %}" width="30" height="30"/>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="http://www.facebook.com/attreya.bhatt">
+                    <a class="nav-link" href="###">
                         <img src="{% static 'mysite/images/facebook.png' %}" width="30" height="30"/>
                     </a>
                 </li>
