for better result

--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -44,12 +44,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="###">
+                    <a class="nav-link" href="https://www.instagram.com/sameer_django/">
                         <img src="{% static 'mysite/images/instagram.png' %}" width="30" height="30"/>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="###">
+                    <a class="nav-link" href="https://www.facebook.com/profile.php?id=100050135742391">
                         <img src="{% static 'mysite/images/facebook.png' %}" width="30" height="30"/>
                     </a>
                 </li>
