my new django website

--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -18,8 +18,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="{% static 'mysite/images/pic.png' %}" width="70" height="70" alt="">
+            <img src="{% static 'mysite/images/pics1.jpeg' %}" class="rounded" width="80" height="80" alt="">
         </a>
+    <!--adding new code-->
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
