--- a/mysite/templates/mysite/index.html
+++ b/mysite/templates/mysite/index.html
@@ -1,6 +1,18 @@
-{% extends 'mysite/base.html' %}
 
+{% extends 'mysite/base.html' %}
+{% load static %}
 {% block content %}
+<!--<div class="container">
+<div class="card" style="width: 18rem;">
+    <div class="col-sm-6">
+  <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+    </div>
+
     <div class="container">
         <div class="row" style="margin-top: 100px">
             <div class="col-sm-6">
@@ -17,8 +29,8 @@
 
                     <button type="submit" class="btn btn-secondary mb-2">Hey, Dude! Tell me a Joke!</button>
                 </form>
-            </div>
-            <div class="col-sm-6">
+            </div> -->
+          <!--  <div class="col-sm-6">
                 <div class="card" style="width: 40rem;">
                     <div class="card-body">
                         <h5 class="card-title">Joke for you</h5>
@@ -33,5 +45,32 @@
         </div>
 <p>Go to next page</p>
 
-    </div>
+    </div> -->
+<div class="container my-4">
+    <div class="row">
+      <div class="card col-md-6 mx-auto" style="width: 18rem;">
+        <img src="{% static 'mysite/images/pics3.png' %}" class="img-thumbnail mt-2" alt="Responsive image">
+          <div class="card-body">
+            <h5 class="card-title">Mohammad Manavver(Python/Django Developer)</h5>
+            <p class="card-text">Hi, I’m Mohd Manavver. I’m an M.C.A who is passionate about python programming and technology. This  is my portfolio website On this plateform, I share all the things I learn about programming as I go.</p>
+           <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+          </div>
+      </div>
+
+      <div class="col-sm-6">
+                <div class="card" style="width: 40rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Joke for you</h5>
+                        <p class="card-text">
+                            {{ joker }}
+
+                        </p>
+                        <a href="{% url 'portfolio' %}" class="btn btn-primary">Check out my portfolio</a>
+                        <!--<a href="{% url 'portfolio' %}" class="card-link">Check out my portfolio</a>-->
+                    </div>
+                </div>
+
+
+</div>
+
 {% endblock %}
